--- a/directbak.yaml
+++ b/directbak.yaml
@@ -630,7 +630,6 @@ payload:
   - '+.0917e.com'
   - '+.0919123.com'
   - '+.093.com'
-  - '+.093.tv'
   - '+.0937js.com'
   - '+.0938net.com'
   - '+.093nd9.com'
@@ -984,7 +983,6 @@ payload:
   - '+.118qikan.com'
   - '+.118study.com'
   - '+.118wa.com'
-  - '+.119.cc'
   - '+.119120.org'
   - '+.119958.com'
   - '+.119hn.com'
@@ -1991,6 +1989,7 @@ payload:
   - '+.202030.com'
   - '+.2021.com'
   - '+.2022cdnpl.com'
+  - '+.2022pola.com'
   - '+.2029.cc'
   - '+.202m.com'
   - '+.202wan.com'
@@ -2265,7 +2264,6 @@ payload:
   - '+.23yy.com'
   - '+.240yx.com'
   - '+.243ty.com'
-  - '+.244101.cc'
   - '+.246546.com'
   - '+.2478.com'
   - '+.248.com'
@@ -2377,7 +2375,6 @@ payload:
   - '+.27aichi.com'
   - '+.27dt.com'
   - '+.27dy.com'
-  - '+.27dyy.com'
   - '+.27l.com'
   - '+.27lmfq.com'
   - '+.27lvpai.com'
@@ -2534,7 +2531,6 @@ payload:
   - '+.301688.com'
   - '+.301mba.com'
   - '+.301nn.com'
-  - '+.301tz.cc'
   - '+.301zhuanfa.com'
   - '+.3023.com'
   - '+.302302.xyz'
@@ -2799,7 +2795,6 @@ payload:
   - '+.35ba.com'
   - '+.35dalu.com'
   - '+.35dxs.com'
-  - '+.35free.net'
   - '+.35go.net'
   - '+.35hw.com'
   - '+.35inter.com'
@@ -3656,7 +3651,6 @@ payload:
   - '+.5068yx.com'
   - '+.506fhq.com'
   - '+.507777.cc'
-  - '+.508843.com'
   - '+.50970.com'
   - '+.50bangzh.com'
   - '+.50fff.net'
@@ -4535,7 +4529,6 @@ payload:
   - '+.52wlw.com'
   - '+.52wmb.com'
   - '+.52wubi.com'
-  - '+.52xiaomian.com'
   - '+.52xiaoshuowang.com'
   - '+.52xiaoyuan.net'
   - '+.52xie.com'
@@ -5812,7 +5805,6 @@ payload:
   - '+.7chajiu.com'
   - '+.7cmz.com'
   - '+.7cname.com'
-  - '+.7colorblog.com'
   - '+.7cxk.com'
   - '+.7dah8.com'
   - '+.7dapei.com'
@@ -5901,6 +5893,7 @@ payload:
   - '+.7tou.com'
   - '+.7tt3333.com'
   - '+.7usa.net'
+  - '+.7v46.icu'
   - '+.7v6.net'
   - '+.7vk.com'
   - '+.7wa.cc'
@@ -6288,7 +6281,6 @@ payload:
   - '+.88xiaoshuo.com'
   - '+.88xr.org'
   - '+.88ysg.com'
-  - '+.88zb.com'
   - '+.88zha.com'
   - '+.88zyw.net'
   - '+.8910.io'
@@ -6956,7 +6948,6 @@ payload:
   - '+.99-ss.com'
   - '+.99.com'
   - '+.99083.com'
-  - '+.9908qhb.com'
   - '+.99114.com'
   - '+.99118.com'
   - '+.9911yx.com'
@@ -8084,7 +8075,6 @@ payload:
   - '+.aixq.com'
   - '+.aixue.net'
   - '+.aixuedai.com'
-  - '+.aixuefu.com'
   - '+.aixuejun.com'
   - '+.aixuetang.com'
   - '+.aixuexi.com'
@@ -9036,7 +9026,6 @@ payload:
   - '+.aqdcdn.com'
   - '+.aqdesk.com'
   - '+.aqdh.com'
-  - '+.aqdkc.com'
   - '+.aqdog.com'
   - '+.aqdstatic.com'
   - '+.aqee.net'
@@ -9167,7 +9156,6 @@ payload:
   - '+.artwe.com'
   - '+.artwer.com'
   - '+.artww.com'
-  - '+.artxuanyi.com'
   - '+.artxun.com'
   - '+.arvato-ocs.com'
   - '+.arvinhk.com'
@@ -10618,7 +10606,6 @@ payload:
   - '+.bfsu-artery.net'
   - '+.bfsutw.com'
   - '+.bftq.com'
-  - '+.bfttiao.com'
   - '+.bftv.com'
   - '+.bfw.cc'
   - '+.bfyx.com'
@@ -10773,7 +10760,6 @@ payload:
   - '+.bigerdata.com'
   - '+.bigertech.com'
   - '+.bigeshuju.com'
-  - '+.bigeyes.com'
   - '+.biggerlens.com'
   - '+.biggeryun.com'
   - '+.biggsai.com'
@@ -14536,7 +14522,6 @@ payload:
   - '+.chinavivaki.com'
   - '+.chinavoa.com'
   - '+.chinavr.net'
-  - '+.chinawaiyu.com'
   - '+.chinawanda.com'
   - '+.chinawatchnet.com'
   - '+.chinawbk.com'
@@ -14563,6 +14548,7 @@ payload:
   - '+.chinaxqf.com'
   - '+.chinaxueqian.com'
   - '+.chinaxwcb.com'
+  - '+.chinaxy.com'
   - '+.chinaxzrc.com'
   - '+.chinayigou.com'
   - '+.chinayigui.com'
@@ -14574,7 +14560,6 @@ payload:
   - '+.chinayzyh.com'
   - '+.chinaz.com'
   - '+.chinaz.net'
-  - '+.chinazhiqing.org'
   - '+.chinazichan.com'
   - '+.chinazikao.com'
   - '+.chinazjph.com'
@@ -15544,7 +15529,6 @@ payload:
   - '+.cndhotels.com'
   - '+.cndids.com'
   - '+.cndingxi.com'
-  - '+.cndip.com'
   - '+.cndkc.net'
   - '+.cndns.com'
   - '+.cndns5.com'
@@ -15970,7 +15954,6 @@ payload:
   - '+.cnyouhao.com'
   - '+.cnys.com'
   - '+.cnyu.com'
-  - '+.cnyugan.com'
   - '+.cnyuming.com'
   - '+.cnyw.net'
   - '+.cnywinfo.com'
@@ -16091,7 +16074,6 @@ payload:
   - '+.codingapp.com'
   - '+.codingbelief.com'
   - '+.codingdao.com'
-  - '+.codingdict.com'
   - '+.codingke.com'
   - '+.codinglabs.org'
   - '+.codingpy.com'
@@ -16696,7 +16678,6 @@ payload:
   - '+.cscec1b.net'
   - '+.cscecst.com'
   - '+.cscfsx.com'
-  - '+.cscsf.com'
   - '+.cscyw.com'
   - '+.csdc.info'
   - '+.csdeshang.com'
@@ -17167,7 +17148,6 @@ payload:
   - '+.czb365.com'
   - '+.czbanbantong.com'
   - '+.czbank.com'
-  - '+.czbanmutian.com'
   - '+.czbq.net'
   - '+.czbtv.com'
   - '+.czbx18.com'
@@ -17496,7 +17476,6 @@ payload:
   - '+.danews.cc'
   - '+.dang-jian.com'
   - '+.dang3.com'
-  - '+.dangan168.com'
   - '+.dangaoss.com'
   - '+.dangbei.com'
   - '+.dangbei.net'
@@ -18201,7 +18180,6 @@ payload:
   - '+.dg114.com'
   - '+.dg121.com'
   - '+.dgbfzz88.com'
-  - '+.dgch.net'
   - '+.dgchangan.com'
   - '+.dgddh.xyz'
   - '+.dgdxs.com'
@@ -18767,7 +18745,6 @@ payload:
   - '+.dm004.net'
   - '+.dm0571.com'
   - '+.dm176.com'
-  - '+.dm190.com'
   - '+.dm300.com'
   - '+.dm321.com'
   - '+.dm321.net'
@@ -18823,7 +18800,6 @@ payload:
   - '+.dndci.com'
   - '+.dndiy.net'
   - '+.dnf8.com'
-  - '+.dnfly.net'
   - '+.dnfziliao.com'
   - '+.dngjxx.com'
   - '+.dngswin7.com'
@@ -19767,7 +19743,6 @@ payload:
   - '+.dylxx.net'
   - '+.dyly.com'
   - '+.dyonr.com'
-  - '+.dypai.com'
   - '+.dyqc.com'
   - '+.dyrbw.com'
   - '+.dyrcb.net'
@@ -20086,7 +20061,6 @@ payload:
   - '+.ebadu.net'
   - '+.ebaifo.com'
   - '+.ebaina.com'
-  - '+.ebama.net'
   - '+.ebangchina.com'
   - '+.ebanma.com'
   - '+.ebanshu.net'
@@ -20496,7 +20470,6 @@ payload:
   - '+.ehuzhu.com'
   - '+.ehvacr.com'
   - '+.ei6nd.com'
-  - '+.eia0.net'
   - '+.eiabbs.net'
   - '+.eickaopei.com'
   - '+.eicodesign.com'
@@ -21622,7 +21595,6 @@ payload:
   - '+.fastadx.com'
   - '+.fastapi.net'
   - '+.fastcdn.com'
-  - '+.fastcname.com'
   - '+.fastdo.cc'
   - '+.fastgit.org'
   - '+.fastgz.com'
@@ -22254,7 +22226,6 @@ payload:
   - '+.fkyuer.com'
   - '+.fkyun.com'
   - '+.fkzgz.com'
-  - '+.fl-ey.com'
   - '+.fl-game.net'
   - '+.fl0632.com'
   - '+.fl168.com'
@@ -23384,7 +23355,6 @@ payload:
   - '+.gdiso.com'
   - '+.gdjdxy.com'
   - '+.gdjinge.com'
-  - '+.gdjn.org'
   - '+.gdjqwl.com'
   - '+.gdjyw.com'
   - '+.gdkaman.com'
@@ -23497,7 +23467,6 @@ payload:
   - '+.geekbang.org'
   - '+.geekbangtech.com'
   - '+.geekcar.com'
-  - '+.geekdigging.com'
   - '+.geekdive.com'
   - '+.geekercloud.com'
   - '+.geekerconsulting.com'
@@ -23789,7 +23758,6 @@ payload:
   - '+.githang.com'
   - '+.github.do'
   - '+.githubusercontents.com'
-  - '+.gitissue.com'
   - '+.gitlee.com'
   - '+.gitlib.com'
   - '+.gitlore.com'
@@ -24047,7 +24015,6 @@ payload:
   - '+.gogooffer.com'
   - '+.gogopzh.com'
   - '+.gogoqq.com'
-  - '+.gogotushuguan.com'
   - '+.gogoup.com'
   - '+.gohighfund.com'
   - '+.goho.co'
@@ -24907,7 +24874,6 @@ payload:
   - '+.gxmlyjy.com'
   - '+.gxmmkt.com'
   - '+.gxnas.com'
-  - '+.gxnnxmhb.com'
   - '+.gxp.cc'
   - '+.gxpfyy.com'
   - '+.gxqcw.com'
@@ -25909,7 +25875,6 @@ payload:
   - '+.hbcg.cc'
   - '+.hbchen.com'
   - '+.hbciqtc.com'
-  - '+.hbcjaq.com'
   - '+.hbcjh.net'
   - '+.hbcjlq.com'
   - '+.hbcjw.com'
@@ -26826,7 +26791,6 @@ payload:
   - '+.hitnology.com'
   - '+.hitokoto.us'
   - '+.hitouch.com'
-  - '+.hitsword.org'
   - '+.hitui.com'
   - '+.hitutu.com'
   - '+.hitux.com'
@@ -27001,7 +26965,6 @@ payload:
   - '+.hlzq.com'
   - '+.hlzsgw.com'
   - '+.hm-3223.net'
-  - '+.hm-yc.com'
   - '+.hm120.com'
   - '+.hm16888.net'
   - '+.hm86.com'
@@ -28097,7 +28060,6 @@ payload:
   - '+.huiemall.com'
   - '+.huieyes.com'
   - '+.huifachina.com'
-  - '+.huifarm.com'
   - '+.huifenqi.com'
   - '+.huifudashi.com'
   - '+.huifusihai.com'
@@ -30326,7 +30288,6 @@ payload:
   - '+.is-programmer.com'
   - '+.is26.com'
   - '+.is36.com'
-  - '+.isaced.com'
   - '+.isamanhua.com'
   - '+.isaonian.com'
   - '+.isay365.com'
@@ -33821,7 +33782,6 @@ payload:
   - '+.kezool.com'
   - '+.kf.ai'
   - '+.kf3msfm.com'
-  - '+.kf4137.com'
   - '+.kf5.com'
   - '+.kf911.com'
   - '+.kfadx.tech'
@@ -34074,7 +34034,6 @@ payload:
   - '+.klmygjj.com'
   - '+.klmyssn.com'
   - '+.klniu.com'
-  - '+.klqian.com'
   - '+.kltdo.com'
   - '+.kltong.com'
   - '+.klub11.com'
@@ -35640,7 +35599,6 @@ payload:
   - '+.lhflh.com'
   - '+.lhggjd.org'
   - '+.lhh.la'
-  - '+.lhm8.com'
   - '+.lhrbszb.com'
   - '+.lhs-arts.org'
   - '+.lhs11.com'
@@ -35758,7 +35716,6 @@ payload:
   - '+.libaclub.com'
   - '+.libai.com'
   - '+.libaopay.com'
-  - '+.libaoyun.com'
   - '+.libinx.com'
   - '+.libisky.com'
   - '+.libomarathon.com'
@@ -35912,7 +35869,6 @@ payload:
   - '+.lilvb.com'
   - '+.lily-collection.com'
   - '+.lilyenglish.com'
-  - '+.lilyinthefield.com'
   - '+.lilysamericandiner.com'
   - '+.lilysgame.com'
   - '+.limax.com'
@@ -36468,7 +36424,6 @@ payload:
   - '+.lmsail.com'
   - '+.lmth2013.com'
   - '+.lmtw.com'
-  - '+.lmtxz1.com'
   - '+.lmubbs.com'
   - '+.lmwgame.com'
   - '+.lmwlhh.com'
@@ -36671,7 +36626,6 @@ payload:
   - '+.longtugame.com'
   - '+.longtuohy.com'
   - '+.longu.com'
-  - '+.longwanshijia.com'
   - '+.longwenedu.com'
   - '+.longwiki.org'
   - '+.longwin.org'
@@ -38916,7 +38870,6 @@ payload:
   - '+.mjyun.com'
   - '+.mjyx.com'
   - '+.mjzj.com'
-  - '+.mjzymh.com'
   - '+.mk-yiliao.com'
   - '+.mk2048.com'
   - '+.mkaliez.com'
@@ -39763,7 +39716,6 @@ payload:
   - '+.mybxg.com'
   - '+.mycaigou.com'
   - '+.mycaijing.com'
-  - '+.mycar168.com'
   - '+.mycaraok.com'
   - '+.mycarbar.com'
   - '+.mycardgame.net'
@@ -41343,7 +41295,6 @@ payload:
   - '+.ok206.com'
   - '+.ok365.com'
   - '+.ok3w.net'
-  - '+.ok5188.net'
   - '+.ok86.com'
   - '+.ok8809.com'
   - '+.ok9624.com'
@@ -41357,6 +41308,7 @@ payload:
   - '+.okbmf.com'
   - '+.okbuy.com'
   - '+.okcard.com'
+  - '+.okcdnns.com'
   - '+.okchang.com'
   - '+.okchexian.com'
   - '+.okdai.com'
@@ -42421,7 +42373,6 @@ payload:
   - '+.petpcb.com'
   - '+.petroren.com'
   - '+.petrvet.com'
-  - '+.pets12345.com'
   - '+.pettime.info'
   - '+.pettwo.com'
   - '+.pewld.com'
@@ -42470,7 +42421,6 @@ payload:
   - '+.pho.so'
   - '+.phodal.com'
   - '+.phoemix.net'
-  - '+.phoenixos.com'
   - '+.phoenixtea.org'
   - '+.phoenixtv.com'
   - '+.phoent.com'
@@ -43290,7 +43240,6 @@ payload:
   - '+.pubuo.com'
   - '+.pubyun.com'
   - '+.pucms.com'
-  - '+.pudaquan.com'
   - '+.pudn.com'
   - '+.pudongwater.com'
   - '+.puduzhai.com'
@@ -44213,7 +44162,6 @@ payload:
   - '+.qiuxue360.com'
   - '+.qiuyexitong.com'
   - '+.qiuyueban.com'
-  - '+.qiuyuewenxue.com'
   - '+.qiuyumi.com'
   - '+.qiuzhang.com'
   - '+.qiuzhijiangtang.com'
@@ -44701,7 +44649,6 @@ payload:
   - '+.quazero.com'
   - '+.quba360.com'
   - '+.qubaike.com'
-  - '+.qubaishu.com'
   - '+.qubaobei.com'
   - '+.qubiankeji.com'
   - '+.qucai.com'
@@ -45841,7 +45788,6 @@ payload:
   - '+.ruchu.club'
   - '+.rueinet.com'
   - '+.rufei.ren'
-  - '+.rufengda.com'
   - '+.rufengso.net'
   - '+.ruffood.com'
   - '+.rufida.com'
@@ -46238,7 +46184,6 @@ payload:
   - '+.sayabear.com'
   - '+.sayloving.com'
   - '+.saywash.com'
-  - '+.sbanfu.com'
   - '+.sbanzu.com'
   - '+.sbc-mcc.com'
   - '+.sbeira.com'
@@ -46675,7 +46620,6 @@ payload:
   - '+.seersee.com'
   - '+.seeseed.com'
   - '+.seeshentech.com'
-  - '+.seesoso.com'
   - '+.seetao.com'
   - '+.seewellintl.net'
   - '+.seewo.com'
@@ -46766,7 +46710,6 @@ payload:
   - '+.seo123.net'
   - '+.seo628.com'
   - '+.seo8o.com'
-  - '+.seocun.com'
   - '+.seocxw.com'
   - '+.seodaniel.com'
   - '+.seofangfa.com'
@@ -48061,7 +48004,6 @@ payload:
   - '+.sidfate.com'
   - '+.sieredu.com'
   - '+.sifalu.com'
-  - '+.sifangguo.com'
   - '+.sifangvideo.com'
   - '+.sifayun.com'
   - '+.siff.com'
@@ -48724,7 +48666,6 @@ payload:
   - '+.snrtv.com'
   - '+.snrunning.com'
   - '+.sns.io'
-  - '+.snsbao.com'
   - '+.snscz.com'
   - '+.snsfun.cc'
   - '+.snsfun.com'
@@ -48960,7 +48901,6 @@ payload:
   - '+.sooyooj.com'
   - '+.sooyuu.com'
   - '+.soozhu.com'
-  - '+.sopaimai.com'
   - '+.sopandas.com'
   - '+.sopanxia.com'
   - '+.soperson.com'
@@ -49109,7 +49049,6 @@ payload:
   - '+.space1688.com'
   - '+.spacechina.com'
   - '+.spacesystech.com'
-  - '+.spacexlanding.com'
   - '+.spark-app.store'
   - '+.spark4y.com'
   - '+.sparkandshine.net'
@@ -50329,7 +50268,6 @@ payload:
   - '+.szt365.com'
   - '+.sztaijier.com'
   - '+.sztalent.org'
-  - '+.sztanko.com'
   - '+.sztara.com'
   - '+.sztkc.com'
   - '+.sztmt.com'
@@ -50418,7 +50356,6 @@ payload:
   - '+.t20000.com'
   - '+.t262.com'
   - '+.t2cn.com'
-  - '+.t2df.com'
   - '+.t3315.com'
   - '+.t365777.com'
   - '+.t5.work'
@@ -53182,7 +53119,6 @@ payload:
   - '+.ukubang.com'
   - '+.ukui.org'
   - '+.ukulelecn.com'
-  - '+.ulaaq.com'
   - '+.ulandian.com'
   - '+.ulaojiu.com'
   - '+.ule.com'
@@ -53990,8 +53926,6 @@ payload:
   - '+.viptarena.com'
   - '+.viptest.net'
   - '+.viptijian.com'
-  - '+.vipwaf.com'
-  - '+.vipwaf.net'
   - '+.vipwhjtsgpc.com'
   - '+.vipxap.com'
   - '+.vipxdns.com'
@@ -54427,6 +54361,7 @@ payload:
   - '+.wakingsands.com'
   - '+.wakkaa.com'
   - '+.wakuai.com'
+  - '+.wal8.com'
   - '+.walahe.com'
   - '+.walanwalan.com'
   - '+.walatao.com'
@@ -54702,7 +54637,6 @@ payload:
   - '+.wanwupai.com'
   - '+.wanwushuo.com'
   - '+.wanwuxia.com'
-  - '+.wanww.com'
   - '+.wanxiang100.com'
   - '+.wanxiangqihang.com'
   - '+.wanyan.com'
@@ -56304,7 +56238,6 @@ payload:
   - '+.wonderjk.com'
   - '+.wonderkun.cc'
   - '+.wondermars.com'
-  - '+.wondermole.com'
   - '+.wonderscloud.com'
   - '+.wondersgroup.com'
   - '+.wondershare.cc'
@@ -57274,7 +57207,6 @@ payload:
   - '+.xcmg.com'
   - '+.xcmgmall.com'
   - '+.xcmh.cc'
-  - '+.xcmh.com'
   - '+.xcn457.com'
   - '+.xcnchinese.com'
   - '+.xcnte.com'
@@ -58369,7 +58301,6 @@ payload:
   - '+.xinpianchang.com'
   - '+.xinpianyugao.com'
   - '+.xinpinget.com'
-  - '+.xinpujie.com'
   - '+.xinpure.com'
   - '+.xinqiannv.com'
   - '+.xinqigu.com'
@@ -59625,7 +59556,6 @@ payload:
   - '+.xzx.com'
   - '+.xzxw.com'
   - '+.xzyhealth.com'
-  - '+.xzzanggong.com'
   - '+.xzzp.net'
   - '+.y-os.net'
   - '+.y.to'
@@ -59974,7 +59904,6 @@ payload:
   - '+.ycsystem.com'
   - '+.yct-tec.com'
   - '+.ycty.org'
-  - '+.ycty119.com'
   - '+.ycwalker.com'
   - '+.ycwanju.com'
   - '+.ycwb.com'
@@ -60171,7 +60100,6 @@ payload:
   - '+.yfcache.com'
   - '+.yfcdn.net'
   - '+.yfcloud.com'
-  - '+.yfcloud.io'
   - '+.yfcmf.net'
   - '+.yfdc.net'
   - '+.yfdns.net'
@@ -60349,7 +60277,6 @@ payload:
   - '+.yifatong.com'
   - '+.yifei.space'
   - '+.yifeisoft.com'
-  - '+.yifeiyuan.me'
   - '+.yifen.com'
   - '+.yifeng-mover.com'
   - '+.yifeng.com'
@@ -60467,7 +60394,6 @@ payload:
   - '+.yimengmusic.com'
   - '+.yimenonline.com'
   - '+.yimenyun.net'
-  - '+.yimi.com'
   - '+.yimianmian.com'
   - '+.yimiaozhongdemeng.com'
   - '+.yimidida.com'
@@ -60733,7 +60659,6 @@ payload:
   - '+.yitongjiayou.com'
   - '+.yitongmedia.com'
   - '+.yitopapp.com'
-  - '+.yituocn.com'
   - '+.yitutech.com'
   - '+.yituyu.com'
   - '+.yiupin.com'
@@ -61594,7 +61519,6 @@ payload:
   - '+.ys1688.cc'
   - '+.ys2345.com'
   - '+.ys4fun.com'
-  - '+.ys666888.com'
   - '+.ys7.com'
   - '+.ys720.com'
   - '+.ys8.com'
@@ -61687,7 +61611,6 @@ payload:
   - '+.ytlh120.com'
   - '+.ytlvbao.com'
   - '+.ytmedia.tv'
-  - '+.ytmer.com'
   - '+.ytnetgame.com'
   - '+.ytoexpress.com'
   - '+.ytoglobal.com'
@@ -61784,7 +61707,6 @@ payload:
   - '+.yubohr.com'
   - '+.yuboinfo.com'
   - '+.yubosun.com'
-  - '+.yuboyun.com'
   - '+.yucccc.com'
   - '+.yuchai.com'
   - '+.yuchen360.com'
@@ -63435,8 +63357,6 @@ payload:
   - '+.zhicms.cc'
   - '+.zhidao91.com'
   - '+.zhidaoanli.com'
-  - '+.zhidaoketang.com'
-  - '+.zhidaolo.com'
   - '+.zhidemai.com'
   - '+.zhidesoft.com'
   - '+.zhideyimai.com'
@@ -64093,7 +64013,6 @@ payload:
   - '+.zijinfx.com'
   - '+.zijinji.com'
   - '+.zijinsuo.com'
-  - '+.zijiren.net'
   - '+.zijizhang.com'
   - '+.zikao-zikao.com'
   - '+.zikao.gd'
@@ -64291,7 +64210,6 @@ payload:
   - '+.zjjbtl.com'
   - '+.zjjd.org'
   - '+.zjjgcyz.com'
-  - '+.zjjlvxing.com'
   - '+.zjjlvyou8264.com'
   - '+.zjjr.com'
   - '+.zjjsbank.com'
@@ -65125,7 +65043,6 @@ payload:
   - '+.zycsc.com'
   - '+.zyctd.com'
   - '+.zycultura.com'
-  - '+.zydsy.com'
   - '+.zye.cc'
   - '+.zyea.com'
   - '+.zyecp.com'
