--- a/directbak.yaml
+++ b/directbak.yaml
@@ -166,7 +166,6 @@ payload:
   - '+.023086.com'
   - '+.02345678.com'
   - '+.023buy.com'
-  - '+.023che.com'
   - '+.023cq.cc'
   - '+.023dir.com'
   - '+.023dns.com'
@@ -470,7 +469,6 @@ payload:
   - '+.0712zpw.com'
   - '+.071333.com'
   - '+.0713fang.com'
-  - '+.0714news.com'
   - '+.0715fc.com'
   - '+.0715rc.com'
   - '+.0715zp.com'
@@ -1118,7 +1116,6 @@ payload:
   - '+.12580.com'
   - '+.12580.net'
   - '+.12580.tv'
-  - '+.12580emall.com'
   - '+.12580jnh.com'
   - '+.12580study.com'
   - '+.125a.net'
@@ -1946,6 +1943,7 @@ payload:
   - '+.1zhao.org'
   - '+.1zhe.com'
   - '+.1zhengji.com'
+  - '+.1zhixue.com'
   - '+.1ziyou.com'
   - '+.1zjob.com'
   - '+.1zr.com'
@@ -3111,6 +3109,7 @@ payload:
   - '+.37wanimg.com'
   - '+.37women.com'
   - '+.37www.com'
+  - '+.37wxwl.com'
   - '+.37yue.com'
   - '+.37yzy.com'
   - '+.37zone.com'
@@ -3131,6 +3130,7 @@ payload:
   - '+.383yun.com'
   - '+.387a.com'
   - '+.3887.com'
+  - '+.388g.com'
   - '+.3892222.com'
   - '+.3895566.com'
   - '+.3899.net'
@@ -4428,7 +4428,6 @@ payload:
   - '+.52inwet.com'
   - '+.52itstyle.com'
   - '+.52itstyle.vip'
-  - '+.52jbh.com'
   - '+.52jbj.com'
   - '+.52jdyy.com'
   - '+.52jiaoshi.com'
@@ -4761,7 +4760,6 @@ payload:
   - '+.57auto.com'
   - '+.57dp.com'
   - '+.57ee.net'
-  - '+.57fx.com'
   - '+.57gif.com'
   - '+.57go.com'
   - '+.57lai.com'
@@ -11796,6 +11794,7 @@ payload:
   - '+.breakingnewsireland.com'
   - '+.breakyizhan.com'
   - '+.brentron.com'
+  - '+.brg0.com'
   - '+.bricktou.com'
   - '+.bridge-image.com'
   - '+.bridgee.net'
@@ -12128,6 +12127,7 @@ payload:
   - '+.byjsjxy.com'
   - '+.byjzxy.com'
   - '+.bykjad.com'
+  - '+.bykszb.com'
   - '+.byloue.com'
   - '+.bylwcc.com'
   - '+.bylwjc.com'
@@ -15010,6 +15010,7 @@ payload:
   - '+.citexpo.org'
   - '+.citiais.com'
   - '+.citic-cid.com'
+  - '+.citic-wealth.com'
   - '+.citic.com'
   - '+.citicbank.com'
   - '+.citicbankuser.com'
@@ -19076,6 +19077,7 @@ payload:
   - '+.door-expo.com'
   - '+.dooreb.com'
   - '+.doorhr.com'
+  - '+.doowinfintec.com'
   - '+.dopa.com'
   - '+.dopic.net'
   - '+.dora-control.cdnetworks.com'
@@ -19614,7 +19616,6 @@ payload:
   - '+.dutype.com'
   - '+.duuchin.com'
   - '+.duunion.com'
-  - '+.duwenfei.com'
   - '+.duwenxue.com'
   - '+.duwenz.com'
   - '+.duwenzhang.com'
@@ -19663,6 +19664,7 @@ payload:
   - '+.dwz.date'
   - '+.dwz.lc'
   - '+.dwz.mk'
+  - '+.dwzjd.com'
   - '+.dx-job.com'
   - '+.dx-tech.com'
   - '+.dx00.net'
@@ -21069,6 +21071,7 @@ payload:
   - '+.evzhidao.com'
   - '+.ew9z.com'
   - '+.ewaga.com'
+  - '+.ewaiyou.com'
   - '+.ewang.com'
   - '+.ewanshang.com'
   - '+.ewarecomputer.com'
@@ -21362,7 +21365,6 @@ payload:
   - '+.faiww.com'
   - '+.fajiayun.com'
   - '+.fajjj.com'
-  - '+.faka.cat'
   - '+.fakeloc.cc'
   - '+.fala114.com'
   - '+.falomall.com'
@@ -22693,6 +22695,7 @@ payload:
   - '+.fujiansme.com'
   - '+.fujieace.com'
   - '+.fujincenter.com'
+  - '+.fujinjiazheng.com'
   - '+.fuka.cc'
   - '+.fukeha.com'
   - '+.fulantv.com'
@@ -24512,6 +24515,7 @@ payload:
   - '+.guajob.com'
   - '+.guakaoba.com'
   - '+.gualemang.com'
+  - '+.guan.com'
   - '+.guan.wang'
   - '+.guan5.com'
   - '+.guanaitong.com'
@@ -25277,6 +25281,7 @@ payload:
   - '+.haigui001.com'
   - '+.haiguime.com'
   - '+.haihaiyu.com'
+  - '+.haihuishou.com'
   - '+.haijia.org'
   - '+.haijiangzx.com'
   - '+.haijiaonet.com'
@@ -25310,6 +25315,7 @@ payload:
   - '+.hainanfz.com'
   - '+.hainanjiuzi.com'
   - '+.hainanpc.net'
+  - '+.hainiaowo.com'
   - '+.hainic.com'
   - '+.haining.tv'
   - '+.hainingnews.net'
@@ -28174,6 +28180,7 @@ payload:
   - '+.huizone.com'
   - '+.huizuche.com'
   - '+.huizuoyuezi.com'
+  - '+.huizustore.com'
   - '+.hujia.org'
   - '+.hujiang.com'
   - '+.hujiuzhou.com'
@@ -28245,6 +28252,7 @@ payload:
   - '+.huoban.com'
   - '+.huobanjs.com'
   - '+.huobanmall.com'
+  - '+.huobanniu.com'
   - '+.huobanxietong.com'
   - '+.huobaowang.com'
   - '+.huobaoyx.com'
@@ -28277,6 +28285,7 @@ payload:
   - '+.huogz.com'
   - '+.huohoo.com'
   - '+.huohu123.com'
+  - '+.huohuacdn.com'
   - '+.huohuo.com'
   - '+.huohuolife.com'
   - '+.huoji.com'
@@ -29760,6 +29769,7 @@ payload:
   - '+.imglink.win'
   - '+.imgo.tv'
   - '+.imgscdn.com'
+  - '+.imgse.com'
   - '+.imgsha.com'
   - '+.imgshangman.com'
   - '+.imgsina.com'
@@ -30808,6 +30818,7 @@ payload:
   - '+.izazamall.com'
   - '+.izdatatech.com'
   - '+.izestchina.com'
+  - '+.izhanchi.com'
   - '+.izhangchu.com'
   - '+.izhangheng.com'
   - '+.izhaohe.com'
@@ -33273,6 +33284,7 @@ payload:
   - '+.k3887.com'
   - '+.k4nz.com'
   - '+.k518.com'
+  - '+.k5n.com'
   - '+.k6271.com'
   - '+.k666.com'
   - '+.k6uk.com'
@@ -33427,6 +33439,7 @@ payload:
   - '+.kangpeining.com'
   - '+.kangqite.com'
   - '+.kangre.com'
+  - '+.kangshuai.biz'
   - '+.kanguo.com'
   - '+.kanguowai.com'
   - '+.kangxi55wlsf.com'
@@ -33609,6 +33622,7 @@ payload:
   - '+.kdzxedu.com'
   - '+.ke.com'
   - '+.ke01.com'
+  - '+.ke51.com'
   - '+.ke6.com'
   - '+.ke86.com'
   - '+.ke8u.com'
@@ -34798,7 +34812,6 @@ payload:
   - '+.laily.net'
   - '+.laima-tech.com'
   - '+.laimaidi.com'
-  - '+.laina.vip'
   - '+.laipeitu.com'
   - '+.laiqi.net'
   - '+.laiqukankan.com'
@@ -38841,6 +38854,7 @@ payload:
   - '+.miyaboke.com'
   - '+.miyanlife.com'
   - '+.miyapay.com'
+  - '+.miyatech.com'
   - '+.miyouu.com'
   - '+.miyuangz.com'
   - '+.miyupu.com'
@@ -39036,6 +39050,7 @@ payload:
   - '+.mobeehome.com'
   - '+.mobeiwenhua.com'
   - '+.mobgi.com'
+  - '+.mobiapp.cloud'
   - '+.mobibao.com'
   - '+.mobibrw.com'
   - '+.mobike.com'
@@ -40247,6 +40262,7 @@ payload:
   - '+.neigou.com'
   - '+.neihan8.com'
   - '+.neihanshequ.com'
+  - '+.neisha.cc'
   - '+.neitui.com'
   - '+.neituixiaowangzi.com'
   - '+.neko.pub'
@@ -41002,6 +41018,7 @@ payload:
   - '+.nuandao.com'
   - '+.nuanjiayuan.com'
   - '+.nuanmaoer.com'
+  - '+.nuannuanzu.com'
   - '+.nuanshi100.com'
   - '+.nuanyuehanxing.com'
   - '+.nubb.com'
@@ -42138,6 +42155,8 @@ payload:
   - '+.patsev.com'
   - '+.patsnapglobal.com'
   - '+.paul.pub'
+  - '+.paulzzh.com'
+  - '+.paulzzh.tech'
   - '+.paxdn.com'
   - '+.paxgl.com'
   - '+.paydxm.com'
@@ -43769,6 +43788,7 @@ payload:
   - '+.qianyu56.com'
   - '+.qianyuangx.com'
   - '+.qianyue999.com'
+  - '+.qianyunyingyong.com'
   - '+.qianyuwang.com'
   - '+.qianzhan.com'
   - '+.qianzhan123.com'
@@ -43788,6 +43808,7 @@ payload:
   - '+.qiaohumall.com'
   - '+.qiaohumi.com'
   - '+.qiaojiang.tv'
+  - '+.qiaomaren.com'
   - '+.qiaomi.com'
   - '+.qiaomizi.vip'
   - '+.qiaomukeji.com'
@@ -46030,6 +46051,7 @@ payload:
   - '+.sairui020.com'
   - '+.saite-xdc.com'
   - '+.saitjr.com'
+  - '+.saiyangame.com'
   - '+.saiyouedu.net'
   - '+.saiyunyx.com'
   - '+.sakway.com'
@@ -49700,6 +49722,7 @@ payload:
   - '+.supei.com'
   - '+.super-mall.shop'
   - '+.super-mt.com'
+  - '+.superayi.com'
   - '+.superboss.cc'
   - '+.superbrowser.hk'
   - '+.superbuy.com'
@@ -55166,6 +55189,7 @@ payload:
   - '+.weiyichina.org'
   - '+.weiyiminhenqiang.com'
   - '+.weiyiqibj.com'
+  - '+.weiyitec.com'
   - '+.weiyituku.com'
   - '+.weiyoubot.com'
   - '+.weiyours.com'
@@ -57099,7 +57123,6 @@ payload:
   - '+.xatielu.com'
   - '+.xatongsheng.net'
   - '+.xatvs.com'
-  - '+.xatyaviation.com'
   - '+.xatyds.com'
   - '+.xatyyx.com'
   - '+.xatzj.com'
@@ -57297,6 +57320,7 @@ payload:
   - '+.xdwyx.com'
   - '+.xdxdsz.com'
   - '+.xdxmwang.com'
+  - '+.xdxx.ink'
   - '+.xdyqw.com'
   - '+.xdzdzl.com'
   - '+.xedaojia.com'
@@ -61371,6 +61395,7 @@ payload:
   - '+.youxizhan.com'
   - '+.youxizhongguo.com'
   - '+.youxizhuang.com'
+  - '+.youxuan.com'
   - '+.youxuanan.com'
   - '+.youxuangu.com'
   - '+.youxueke.com'
@@ -63245,6 +63270,7 @@ payload:
   - '+.zhenghemold.com'
   - '+.zhengjia.com'
   - '+.zhengjiantong.com'
+  - '+.zhengjianzhao.com'
   - '+.zhengjicn.com'
   - '+.zhengjie.com'
   - '+.zhengmeng.net'
@@ -64777,6 +64803,7 @@ payload:
   - '+.zuchecdn.com'
   - '+.zucp.net'
   - '+.zudeapp.com'
+  - '+.zudequ.com'
   - '+.zudong.com'
   - '+.zufang.com'
   - '+.zufangbao.com'
