--- a/AppleCN.yaml
+++ b/AppleCN.yaml
@@ -6,6 +6,7 @@ payload:
   - '+.a5.mzstatic.com'
   - '+.adcdownload.apple.com.akadns.net'
   - '+.adcdownload.apple.com'
+  - '+.app-site-association.cdn-apple.com'
   - '+.appldnld.apple.com'
   - '+.appldnld.g.aaplimg.com'
   - '+.appleid.cdn-apple.com'
@@ -39,6 +40,7 @@ payload:
   - '+.configuration.apple.com.akadns.net'
   - '+.configuration.apple.com'
   - '+.cstat.apple.com'
+  - '+.cstat.cdn-apple.com'
   - '+.dd-cdn.origin-apple.com.akadns.net'
   - '+.download.developer.apple.com'
   - '+.gs-loc-cn.apple.com'
