--- a/directbak.yaml
+++ b/directbak.yaml
@@ -4938,7 +4938,6 @@ payload:
   - '+.5etv.com'
   - '+.5ewin.com'
   - '+.5fen.com'
-  - '+.5fou.com'
   - '+.5fun.com'
   - '+.5fwan.com'
   - '+.5gcg.com'
@@ -5528,7 +5527,6 @@ payload:
   - '+.712100.com'
   - '+.71360.com'
   - '+.7139.com'
-  - '+.714.hk'
   - '+.715083.com'
   - '+.715300.com'
   - '+.71668.net'
@@ -8086,7 +8084,6 @@ payload:
   - '+.aiyuke.com'
   - '+.aizaoqi.com'
   - '+.aizhan.com'
-  - '+.aizhanku.com'
   - '+.aizhengli.com'
   - '+.aizhenrong.com'
   - '+.aizhet.com'
@@ -9780,7 +9777,6 @@ payload:
   - '+.baituibao.com'
   - '+.baiu.com'
   - '+.baiud.com'
-  - '+.baiudu.com'
   - '+.baiven.com'
   - '+.baiwandz.com'
   - '+.baiwang.com'
@@ -11291,7 +11287,6 @@ payload:
   - '+.bjwhds.com'
   - '+.bjwkzl.com'
   - '+.bjwsk.com'
-  - '+.bjwsyy.com'
   - '+.bjwszyxy.com'
   - '+.bjwwhc.com'
   - '+.bjwxhl.com'
@@ -24780,7 +24775,6 @@ payload:
   - '+.gusuwang.com'
   - '+.gutianfood.com'
   - '+.gutou.com'
-  - '+.gutouwang.net'
   - '+.guwan.com'
   - '+.guweimin.com'
   - '+.guwenxs.com'
@@ -29196,7 +29190,6 @@ payload:
   - '+.idianfa.com'
   - '+.idianshijia.com'
   - '+.idigi.net'
-  - '+.idkaiu.com'
   - '+.idler-et.com'
   - '+.idmchina.net'
   - '+.idmzj.com'
@@ -29787,6 +29780,7 @@ payload:
   - '+.iminho.me'
   - '+.imipy.com'
   - '+.imitui.com'
+  - '+.imixpark.com'
   - '+.imjiayin.com'
   - '+.imkerwin.com'
   - '+.imkevinyang.com'
@@ -31174,7 +31168,6 @@ payload:
   - '+.jfinfo.com'
   - '+.jfq.com'
   - '+.jfrogchina.com'
-  - '+.jfscd.com'
   - '+.jfshare.com'
   - '+.jfstatic.com'
   - '+.jfuwu.com'
@@ -34001,7 +33994,6 @@ payload:
   - '+.kkk5.com'
   - '+.kkkd.com'
   - '+.kkkkba.com'
-  - '+.kkkmh.com'
   - '+.kkkwww.com'
   - '+.kklishi.com'
   - '+.kklxj.com'
@@ -36549,7 +36541,6 @@ payload:
   - '+.loldytt.org'
   - '+.loldytt.tv'
   - '+.lolgo.net'
-  - '+.lolhd.com'
   - '+.loli.cd'
   - '+.loli.cloud'
   - '+.loli.ee'
@@ -36720,7 +36711,6 @@ payload:
   - '+.lotut.com'
   - '+.loubobooo.com'
   - '+.louding.com'
-  - '+.louishan.com'
   - '+.louislivi.com'
   - '+.louisvv.com'
   - '+.loukee.com'
@@ -40784,7 +40774,6 @@ payload:
   - '+.nmzzlhwlkj.com'
   - '+.nn.com'
   - '+.nn12333.com'
-  - '+.nn92.com'
   - '+.nncc626.com'
   - '+.nncj.com'
   - '+.nndims.com'
@@ -44296,6 +44285,7 @@ payload:
   - '+.qkvop.com'
   - '+.qkzj.com'
   - '+.ql-cellbank.com'
+  - '+.ql-msx.com'
   - '+.ql18.mobi'
   - '+.ql1d.com'
   - '+.ql47.com'
@@ -49840,7 +49830,6 @@ payload:
   - '+.swaqds.com'
   - '+.swarma.net'
   - '+.swarma.org'
-  - '+.swarmcloud.net'
   - '+.swatou.com'
   - '+.swbbsc.com'
   - '+.swchina.org'
@@ -55165,7 +55154,6 @@ payload:
   - '+.weixinjiajia.com'
   - '+.weixinju.com'
   - '+.weixinkd.com'
-  - '+.weixinmenu.com'
   - '+.weixinmuban.com'
   - '+.weixinmvp.com'
   - '+.weixinpy.com'
@@ -57131,7 +57119,6 @@ payload:
   - '+.xatongsheng.net'
   - '+.xatvs.com'
   - '+.xatyds.com'
-  - '+.xatyyx.com'
   - '+.xatzj.com'
   - '+.xauat-hqc.com'
   - '+.xaudiopro.com'
@@ -57432,7 +57419,6 @@ payload:
   - '+.xgsdk.com'
   - '+.xgslb.net'
   - '+.xgt2014.com'
-  - '+.xgv5.com'
   - '+.xgwx.net'
   - '+.xgxedu.com'
   - '+.xgz.cc'
@@ -58936,6 +58922,7 @@ payload:
   - '+.xqship.com'
   - '+.xqspx.com'
   - '+.xqtesting.com'
+  - '+.xqwggg.com'
   - '+.xqwww.com'
   - '+.xrcch.com'
   - '+.xrccp.com'
@@ -60850,7 +60837,6 @@ payload:
   - '+.yktworld.com'
   - '+.yktz.net'
   - '+.ykyao.com'
-  - '+.ykydxh.com'
   - '+.ykzr.com'
   - '+.yl1001.com'
   - '+.yladm.com'
@@ -61003,7 +60989,6 @@ payload:
   - '+.ynshijian.com'
   - '+.ynsjg.com'
   - '+.ynsqx.com'
-  - '+.yntc999.com'
   - '+.ynteng.com'
   - '+.yntsg.com'
   - '+.ynwin.com'
@@ -61157,7 +61142,6 @@ payload:
   - '+.youboy.com'
   - '+.youc.com'
   - '+.youcaizhushou.com'
-  - '+.youcao.cc'
   - '+.youcash.com'
   - '+.youcha.net'
   - '+.youchedi.com'
@@ -61645,7 +61629,6 @@ payload:
   - '+.ytoexpress.com'
   - '+.ytoglobal.com'
   - '+.ytop8.com'
-  - '+.ytoxl.com'
   - '+.ytpp.com'
   - '+.ytrenyu.com'
   - '+.ytsanchuan.com'
@@ -61939,7 +61922,6 @@ payload:
   - '+.yundianjia.com'
   - '+.yundianseo.com'
   - '+.yundiantech.com'
-  - '+.yundiao365.com'
   - '+.yundns.vip'
   - '+.yundongfang.com'
   - '+.yundonghao.com'
