--- a/directbak.yaml
+++ b/directbak.yaml
@@ -613,7 +613,6 @@ payload:
   - '+.08an.com'
   - '+.08c6.com'
   - '+.08cms.com'
-  - '+.08g.cc'
   - '+.08ky.com'
   - '+.08px.com'
   - '+.090expo.com'
@@ -5686,7 +5685,6 @@ payload:
   - '+.777biubiu.com'
   - '+.777lala.com'
   - '+.777moban.com'
-  - '+.777n.com'
   - '+.7788.com'
   - '+.7788aabb.com'
   - '+.7788js.com'
@@ -6403,6 +6401,7 @@ payload:
   - '+.90wmoyu.com'
   - '+.90yang.com'
   - '+.90zm.net'
+  - '+.91-box.com'
   - '+.91.com'
   - '+.910app.com'
   - '+.910play.com'
@@ -7241,6 +7240,7 @@ payload:
   - '+.aaspt.net'
   - '+.aastartups.com'
   - '+.aatccn.com'
+  - '+.aavisa.com'
   - '+.aayis.com'
   - '+.ab126.com'
   - '+.ab173.com'
@@ -7406,6 +7406,7 @@ payload:
   - '+.actionsky.com'
   - '+.activeclub.net'
   - '+.activepower.net'
+  - '+.activity04.com'
   - '+.activity180.com'
   - '+.actom.me'
   - '+.actoys.com'
@@ -7586,7 +7587,6 @@ payload:
   - '+.aepku.com'
   - '+.aerfaying.com'
   - '+.aerochina.net'
-  - '+.aes01.com'
   - '+.aesdrink.com'
   - '+.aesml.com'
   - '+.aesucai.com'
@@ -8430,7 +8430,6 @@ payload:
   - '+.aluaa.com'
   - '+.alumni-cn.org'
   - '+.alumni-scut.org'
-  - '+.aluntan.com'
   - '+.alwaysdesign.xin'
   - '+.alwaysnb.com'
   - '+.alwindoor.com'
@@ -8502,6 +8501,7 @@ payload:
   - '+.amz123.com'
   - '+.amz520.com'
   - '+.amzcaptain.com'
+  - '+.analogmiko.com'
   - '+.analysysdata.com'
   - '+.analytics-china.com'
   - '+.analyticskey.com'
@@ -8511,6 +8511,7 @@ payload:
   - '+.anav.com'
   - '+.anbang-life.com'
   - '+.anbanggroup.com'
+  - '+.anbokeji.net'
   - '+.anchengcn.com'
   - '+.anchi-china.com'
   - '+.anchnet.com'
@@ -9571,7 +9572,6 @@ payload:
   - '+.babybus.com'
   - '+.babybus.org'
   - '+.babycdn.com'
-  - '+.babyinhere.com'
   - '+.babymoro.com'
   - '+.babymozart.cc'
   - '+.babyqiming.com'
@@ -9637,7 +9637,6 @@ payload:
   - '+.baidu-int.com'
   - '+.baidu-itm.com'
   - '+.baidu-mgame.com'
-  - '+.baidu-umoney.com'
   - '+.baidu-wenxue.com'
   - '+.baidu.cc'
   - '+.baidu.cm'
@@ -10380,6 +10379,7 @@ payload:
   - '+.beihai365.com'
   - '+.beihaidc.com'
   - '+.beihaiting.com'
+  - '+.beihaiwz.com'
   - '+.beihuasoft.com'
   - '+.beijing-hmo.com'
   - '+.beijing-hualian.com'
@@ -14206,7 +14206,6 @@ payload:
   - '+.chinahao.com'
   - '+.chinaharp.com'
   - '+.chinahazelnut.com'
-  - '+.chinahbnet.com'
   - '+.chinahightech.com'
   - '+.chinahighway.com'
   - '+.chinahkidc.net'
@@ -16884,6 +16883,7 @@ payload:
   - '+.cttq.com'
   - '+.cttsd.com'
   - '+.cttv.co'
+  - '+.ctuaa.com'
   - '+.ctvpost.com'
   - '+.ctvwx.com'
   - '+.ctwxc.com'
@@ -18262,6 +18262,7 @@ payload:
   - '+.dian-ying.com'
   - '+.dian.so'
   - '+.dian123.com'
+  - '+.dian234.com'
   - '+.dian321.com'
   - '+.dian5.com'
   - '+.diananjia.com'
@@ -18956,7 +18957,6 @@ payload:
   - '+.dolphin.com'
   - '+.dolphinphp.com'
   - '+.domaingz.com'
-  - '+.domarketing.org'
   - '+.domengle.com'
   - '+.dominoh.com'
   - '+.domobcdn.com'
@@ -19096,7 +19096,6 @@ payload:
   - '+.douban.com'
   - '+.douban.fm'
   - '+.doubanio.com'
-  - '+.doubaojf.com'
   - '+.doubean.com'
   - '+.doubi.ren'
   - '+.doubimeizhi.com'
@@ -20542,7 +20541,6 @@ payload:
   - '+.elementfresh.com'
   - '+.elenet.me'
   - '+.elephant-base.com'
-  - '+.elesos.com'
   - '+.elex-tech.net'
   - '+.elexcon.com'
   - '+.elfartworld.com'
@@ -24792,6 +24790,7 @@ payload:
   - '+.gvlocalization.com'
   - '+.gvofl.com'
   - '+.gw-ec.com'
+  - '+.gw.craft.moe'
   - '+.gw2sc.com'
   - '+.gw66.vip'
   - '+.gw8888.com'
@@ -25403,6 +25402,7 @@ payload:
   - '+.halixun.com'
   - '+.halloar.com'
   - '+.hallofix.com'
+  - '+.halobear.com'
   - '+.halomobi.com'
   - '+.haluoha.com'
   - '+.hama-net.com'
@@ -25703,7 +25703,6 @@ payload:
   - '+.haosix.com'
   - '+.haosou.com'
   - '+.haostay.com'
-  - '+.haotb.com'
   - '+.haote.com'
   - '+.haotehui.com'
   - '+.haotianhuyu.com'
@@ -27247,6 +27246,7 @@ payload:
   - '+.hongjingedu.com'
   - '+.hongjiu66.com'
   - '+.hongkang-life.com'
+  - '+.hongkongbluebag.hk'
   - '+.hongkou.net'
   - '+.hongku.com'
   - '+.hongkunjinfu.com'
@@ -28064,7 +28064,6 @@ payload:
   - '+.huigezi.org'
   - '+.huihaicenter.com'
   - '+.huihaicn.com'
-  - '+.huihedian.com'
   - '+.huihua365.com'
   - '+.huihuaren.com'
   - '+.huihuarensheng.com'
@@ -28765,7 +28764,6 @@ payload:
   - '+.i3v.cc'
   - '+.i3youlun.com'
   - '+.i3yuan.com'
-  - '+.i3zh.com'
   - '+.i4px.com'
   - '+.i4t.com'
   - '+.i51game.com'
@@ -28853,6 +28851,7 @@ payload:
   - '+.ibanquan.com'
   - '+.ibantang.com'
   - '+.ibanyu.com'
+  - '+.ibaobay.com'
   - '+.ibaotu.com'
   - '+.ibaoxiu.net'
   - '+.ibaozou.com'
@@ -28964,6 +28963,7 @@ payload:
   - '+.iceasy.com'
   - '+.icebear.me'
   - '+.icebound.cc'
+  - '+.icecloud-car.com'
   - '+.iceflowsoft.com'
   - '+.icefoxgame.com'
   - '+.iceinto.com'
@@ -30633,6 +30633,7 @@ payload:
   - '+.iuban.com'
   - '+.iucars.com'
   - '+.iucdn.com'
+  - '+.iuctrip.com'
   - '+.iudodo.com'
   - '+.iufida.com'
   - '+.iuinns.com'
@@ -31506,7 +31507,6 @@ payload:
   - '+.jiazhua.com'
   - '+.jiazhuang.com'
   - '+.jiazhuang6.com'
-  - '+.jiazijun.com'
   - '+.jiazile.com'
   - '+.jiazuo.cc'
   - '+.jibai.com'
@@ -34673,7 +34673,6 @@ payload:
   - '+.kxinyk.com'
   - '+.kxji.com'
   - '+.kxjlt.org'
-  - '+.kxnboat.com'
   - '+.kxpay.net'
   - '+.kxqo2ev.com'
   - '+.kxscience.com'
@@ -35740,6 +35739,7 @@ payload:
   - '+.licat.com'
   - '+.lichangtai.com'
   - '+.lichangtao.com'
+  - '+.lichenglove.com'
   - '+.lichengwu.net'
   - '+.lichenjy.com'
   - '+.lichensafe.com'
@@ -36650,6 +36650,7 @@ payload:
   - '+.longzu.com'
   - '+.lonlife.org'
   - '+.lontiumsemi.com'
+  - '+.lonway.net'
   - '+.loocall.com'
   - '+.loodd.com'
   - '+.looeen.com'
@@ -37299,7 +37300,6 @@ payload:
   - '+.lz310.com'
   - '+.lz520.net'
   - '+.lzabcd.com'
-  - '+.lzafny.com'
   - '+.lzane.com'
   - '+.lzbank.com'
   - '+.lzc369.com'
@@ -38292,6 +38292,7 @@ payload:
   - '+.mengwuji.net'
   - '+.mengxi.com'
   - '+.mengxiangeka.com'
+  - '+.mengxintianxia.com'
   - '+.mengyoo.com'
   - '+.mengyou.org'
   - '+.mengyuzhe.com'
@@ -41496,6 +41497,7 @@ payload:
   - '+.ono-bbb.com'
   - '+.ononw.com'
   - '+.onqc.com'
+  - '+.onszln.com'
   - '+.ontheroadstore.com'
   - '+.onthink.com'
   - '+.ontvb.com'
@@ -43200,6 +43202,7 @@ payload:
   - '+.psychspace.com'
   - '+.psysh.com'
   - '+.psyzg.com'
+  - '+.psznh.com'
   - '+.pszx.com'
   - '+.pszxw.com'
   - '+.pt-bus.com'
@@ -43808,6 +43811,7 @@ payload:
   - '+.qiaqa.com'
   - '+.qiaqiafood.com'
   - '+.qiawei.com'
+  - '+.qibaodx.com'
   - '+.qibazaixian.com'
   - '+.qibingdaojia.com'
   - '+.qibo168.com'
@@ -45047,6 +45051,7 @@ payload:
   - '+.ranknowcn.com'
   - '+.ranling.com'
   - '+.rantu.com'
+  - '+.ranwen.tv'
   - '+.ranwen.tw'
   - '+.ranwena.com'
   - '+.ranwena.net'
@@ -46941,6 +46946,7 @@ payload:
   - '+.shangdu.info'
   - '+.shangeedu.com'
   - '+.shangeseo.com'
+  - '+.shangeyun.com'
   - '+.shangfayuan.com'
   - '+.shangfox.com'
   - '+.shanggame.com'
@@ -47399,6 +47405,7 @@ payload:
   - '+.shiku.co'
   - '+.shilawyer.com'
   - '+.shileizcc.com'
+  - '+.shileizuji.com'
   - '+.shilian.com'
   - '+.shilian.net'
   - '+.shilicdn.com'
@@ -51428,6 +51435,7 @@ payload:
   - '+.tielingcn.com'
   - '+.tielu.org'
   - '+.tiepishihu.com'
+  - '+.tiepishihu.hk'
   - '+.tietie.la'
   - '+.tietuku.com'
   - '+.tieweishi.com'
@@ -52046,6 +52054,7 @@ payload:
   - '+.toysir.com'
   - '+.tp8.me'
   - '+.tpbook.com'
+  - '+.tpengyun.com'
   - '+.tpkey.com'
   - '+.tplife.com'
   - '+.tplm123.com'
@@ -54758,7 +54767,6 @@ payload:
   - '+.wbw.im'
   - '+.wbxgl.com'
   - '+.wbxs8.com'
-  - '+.wbyweb.com'
   - '+.wbzol.com'
   - '+.wc44.com'
   - '+.wcd.im'
@@ -57063,6 +57071,7 @@ payload:
   - '+.xabcloud.com'
   - '+.xacbank.com'
   - '+.xacbwl.com'
+  - '+.xacitywall.com'
   - '+.xacnnic.com'
   - '+.xadamai.com'
   - '+.xadiannao.com'
@@ -57685,6 +57694,7 @@ payload:
   - '+.xiaodoubi.com'
   - '+.xiaodoushebao.com'
   - '+.xiaodouzhuan.net'
+  - '+.xiaodouzuche.com'
   - '+.xiaoduoai.com'
   - '+.xiaoduseo.com'
   - '+.xiaodutv.com'
@@ -58517,6 +58527,7 @@ payload:
   - '+.xiwangchina.com'
   - '+.xiwangd.com'
   - '+.xiwanglife.com'
+  - '+.xiwantrip.com'
   - '+.xiwenquan.com'
   - '+.xiwnn.com'
   - '+.xiwuji.com'
@@ -58669,7 +58680,6 @@ payload:
   - '+.xlcidc.com'
   - '+.xlctyd.com'
   - '+.xlcz.com'
-  - '+.xlfans.com'
   - '+.xlgao.com'
   - '+.xlgxapp.com'
   - '+.xlhb.com'
@@ -59084,6 +59094,7 @@ payload:
   - '+.xuanxue.com'
   - '+.xuanxueyuan.com'
   - '+.xuanyangxl.com'
+  - '+.xuanyaoxp.com'
   - '+.xuanyouwang.com'
   - '+.xuanyuanhuangdi.org'
   - '+.xuanyusong.com'
@@ -62451,6 +62462,7 @@ payload:
   - '+.yzintelligence.com'
   - '+.yzinter.com'
   - '+.yzipi.com'
+  - '+.yzja.com'
   - '+.yzjjw.net'
   - '+.yzjsxy.com'
   - '+.yzkimage.com'
@@ -63532,6 +63544,7 @@ payload:
   - '+.zhiyinmedia.com'
   - '+.zhiyoo.com'
   - '+.zhiyoubao.com'
+  - '+.zhiyousx.com'
   - '+.zhiyuanit.com'
   - '+.zhiyuanyun.com'
   - '+.zhiyujit.com'
@@ -63713,7 +63726,6 @@ payload:
   - '+.zhongzq.com'
   - '+.zhonzhu.com'
   - '+.zhopera.com'
-  - '+.zhou1go.com'
   - '+.zhouao.com'
   - '+.zhoubochina.com'
   - '+.zhouchun.net'
