--- a/directbak.yaml
+++ b/directbak.yaml
@@ -8178,6 +8178,7 @@ payload:
   - '+.alfheim.cc'
   - '+.algorithmart.com'
   - '+.ali-health.com'
+  - '+.ali-star.com'
   - '+.ali213.com'
   - '+.ali213.net'
   - '+.ali37.net'
@@ -8878,7 +8879,6 @@ payload:
   - '+.apjingsi.com'
   - '+.apk3.com'
   - '+.apkevery.com'
-  - '+.apkgu.com'
   - '+.apkplug.com'
   - '+.apkrj.com'
   - '+.apkyx.com'
@@ -10647,7 +10647,6 @@ payload:
   - '+.bianews.com'
   - '+.bianfeng.com'
   - '+.bianhao6.com'
-  - '+.bianjibu.net'
   - '+.bianjiqi.net'
   - '+.bianjiyi.com'
   - '+.bianlidianjiameng.net'
@@ -10953,6 +10952,7 @@ payload:
   - '+.birdbro.com'
   - '+.birdol.com'
   - '+.birdpush.com'
+  - '+.birentech.com'
   - '+.bisairi.com'
   - '+.bisenet.com'
   - '+.bishen.ink'
@@ -11633,7 +11633,6 @@ payload:
   - '+.boohee.com'
   - '+.book118.com'
   - '+.book1234.com'
-  - '+.book365.net'
   - '+.book520.com'
   - '+.bookask.com'
   - '+.bookba.net'
@@ -12070,6 +12069,7 @@ payload:
   - '+.bxrfund.com'
   - '+.bxsnews.com'
   - '+.bxsychina.com'
+  - '+.bxv8.com'
   - '+.bxwst.com'
   - '+.bxwx.la'
   - '+.bxwx.tv'
@@ -14526,6 +14526,7 @@ payload:
   - '+.chinaxiaokang.com'
   - '+.chinaxinge.com'
   - '+.chinaxinport.com'
+  - '+.chinaxinye.com'
   - '+.chinaxpp.com'
   - '+.chinaxq.com'
   - '+.chinaxqf.com'
@@ -15731,6 +15732,7 @@ payload:
   - '+.cnmia.org'
   - '+.cnmill.com'
   - '+.cnmineqs.net'
+  - '+.cnmmsc.org'
   - '+.cnmo.com'
   - '+.cnmobile.net'
   - '+.cnmods.net'
@@ -15904,6 +15906,7 @@ payload:
   - '+.cnweblog.com'
   - '+.cnwebshow.com'
   - '+.cnweilo.com'
+  - '+.cnweisou.com'
   - '+.cnwen.net'
   - '+.cnwenshi.net'
   - '+.cnwest.com'
@@ -20707,7 +20710,6 @@ payload:
   - '+.enrz.com'
   - '+.enscg.com'
   - '+.enshide.com'
-  - '+.enshifdc.com'
   - '+.enshijob.com'
   - '+.enstylement.com'
   - '+.ent120.com'
@@ -21596,6 +21598,7 @@ payload:
   - '+.fastreportcn.com'
   - '+.fastsoc.com'
   - '+.fastsoso.cc'
+  - '+.faststatics.com'
   - '+.fat999.com'
   - '+.fatedier.com'
   - '+.fateskins.com'
@@ -27336,6 +27339,7 @@ payload:
   - '+.hortorgames.com'
   - '+.hosizoraworks.org'
   - '+.hosjjk.com'
+  - '+.hosory.com'
   - '+.hospmall.com'
   - '+.hostadm.net'
   - '+.hostbbs.net'
@@ -35933,7 +35937,6 @@ payload:
   - '+.linglong.space'
   - '+.linglongart.com'
   - '+.linglongtech.com'
-  - '+.linglu666.com'
   - '+.lingmovie.com'
   - '+.lingnanpass.com'
   - '+.lingocn.com'
@@ -36006,6 +36009,7 @@ payload:
   - '+.linkh5.xyz'
   - '+.linkhaitao.com'
   - '+.linkheer.com'
+  - '+.linkiebuy.com'
   - '+.linkingme.com'
   - '+.linkist.net'
   - '+.linknewideas.com'
@@ -36476,6 +36480,7 @@ payload:
   - '+.locatran.com'
   - '+.locez.com'
   - '+.lockfans.com'
+  - '+.locklauncher.com'
   - '+.lockscreenimg.com'
   - '+.lockty.com'
   - '+.locnavi.com'
@@ -39036,6 +39041,7 @@ payload:
   - '+.mobayx.com'
   - '+.mobcastlead.com'
   - '+.mobcent.com'
+  - '+.mobcloud.mobi'
   - '+.mobdatas.com'
   - '+.mobeehome.com'
   - '+.mobeiwenhua.com'
@@ -40207,7 +40213,6 @@ payload:
   - '+.ncpqh.com'
   - '+.ncpssd.org'
   - '+.ncq8.com'
-  - '+.ncrica.org'
   - '+.ncu.me'
   - '+.ncvtinfo.com'
   - '+.ncvtmi.com'
@@ -41266,6 +41271,7 @@ payload:
   - '+.ofo.com'
   - '+.ofo.so'
   - '+.ofpay.com'
+  - '+.ofpay365.com'
   - '+.ofuns.com'
   - '+.ofweek.com'
   - '+.ofweek.net'
@@ -42237,6 +42243,7 @@ payload:
   - '+.pcviva.com'
   - '+.pcw365.com'
   - '+.pcwenti.com'
+  - '+.pcwgu.com'
   - '+.pcwl.com'
   - '+.pcyangguangban.com'
   - '+.pd-sts.com'
@@ -44158,6 +44165,7 @@ payload:
   - '+.qiumeiapp.com'
   - '+.qiumibao.com'
   - '+.qiumijia.com'
+  - '+.qiuqiusd.com'
   - '+.qiushi.com'
   - '+.qiushibaike.com'
   - '+.qiushibang.com'
@@ -47441,6 +47449,7 @@ payload:
   - '+.shipfinder.com'
   - '+.shipgce.com'
   - '+.shiphr.com'
+  - '+.shipinzhibojian.com'
   - '+.ships66.com'
   - '+.shipsc.org'
   - '+.shiptux.com'
@@ -49710,7 +49719,6 @@ payload:
   - '+.suofeiya.com'
   - '+.suofeiyashop.com'
   - '+.suoge.net'
-  - '+.suorang.com'
   - '+.suoxin5.com'
   - '+.suoyiren.com'
   - '+.supcname.com'
@@ -50037,6 +50045,7 @@ payload:
   - '+.syoseo.com'
   - '+.syoucn.com'
   - '+.syouhui.com'
+  - '+.syounggroup.com'
   - '+.sypao.com'
   - '+.sypole.com'
   - '+.syr-sce.com'
@@ -51153,6 +51162,8 @@ payload:
   - '+.thecodeway.com'
   - '+.thedatasys.com'
   - '+.theduapp.com'
+  - '+.thefastfile.com'
+  - '+.thefastimg.com'
   - '+.thefatherofsalmon.com'
   - '+.thefifthera.com'
   - '+.thegbdc.com'
@@ -54954,6 +54965,7 @@ payload:
   - '+.wefans.com'
   - '+.wefiler.com'
   - '+.wefinger.club'
+  - '+.wefitos.com'
   - '+.wefunol.com'
   - '+.wegame.com'
   - '+.wegamex.com.hk'
@@ -55013,6 +55025,7 @@ payload:
   - '+.weifengke.com'
   - '+.weifengou.com'
   - '+.weifengtang.com'
+  - '+.weifenpay.com'
   - '+.weifrom.com'
   - '+.weigang.com'
   - '+.weigongju.org'
@@ -57514,7 +57527,6 @@ payload:
   - '+.xiamentianqi114.com'
   - '+.xiami.com'
   - '+.xiami.net'
-  - '+.xiami77.com'
   - '+.xiamiaopai.com'
   - '+.xiamoyun.com'
   - '+.xiamp4.com'
@@ -59445,6 +59457,7 @@ payload:
   - '+.xy78.com'
   - '+.xy980.net'
   - '+.xyb100.com'
+  - '+.xyb2b.com'
   - '+.xybsyw.com'
   - '+.xybygw.com'
   - '+.xycaogen.com'
@@ -63716,6 +63729,7 @@ payload:
   - '+.zhongyoo.com'
   - '+.zhongyouex.com'
   - '+.zhongyougc.com'
+  - '+.zhongyoumedia.com'
   - '+.zhongyunjy.com'
   - '+.zhongzhao.com'
   - '+.zhongzhide.com'
